--- a/styles/styles.css
+++ b/styles/styles.css
@@ -114,9 +114,11 @@ margin-right: 50px;
 align-items: center;
 letter-spacing: 0.02em;
 }
+
 .nav .nav-list:last-child {
   margin-right: auto;
 }
+
 .nav-list > a {
   font-size: 14px;
   line-height: 1.17;
@@ -128,17 +130,38 @@ letter-spacing: 0.02em;
   text-decoration: none;
   font-weight: 500;
   color: var(--main-text-color);
+  position: relative;
 }
+
 .nav-list > a:hover,
 .nav-list > a:focus {
   color: var(--bg-buttons-color-hover);
   text-decoration: none;
 }
+
+.nav-list.current > a::after {
+  position: absolute;
+  content: '';
+  bottom: 0;
+  left: 0;
+
+  width: 100%;
+  height: 4px;
+  display: block;
+  border-radius: 2px;
+  background-color: var(--bg-buttons-color-hover);
+}
+
+.nav-list.current a {
+  color: var(--bg-buttons-color-hover)
+}
+
 .contacts > a:focus,
 .contacts > a:hover {
   color: var(--bg-buttons-color-hover);
   text-decoration: none;
 } 
+
 .contacts {
   display: flex;
   margin-left: auto;
@@ -181,6 +204,7 @@ letter-spacing: 0.02em;
   max-width: 1600px;
   background-size: cover;
 }
+
 .hero-heading {
   margin-bottom: 30px;
   color: var(--bg-color);
@@ -192,6 +216,7 @@ letter-spacing: 0.02em;
   margin-bottom: 40px;
   letter-spacing: 0.06em;
 }
+
 .hero-button  {
   padding: 10px 32px 10px 32px;
   border-radius: 4px;
@@ -209,6 +234,56 @@ letter-spacing: 0.02em;
   min-height: 50px;
   letter-spacing: 0.06em;
 }
+
+.backdrop {
+  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden{
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.modal-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 528px;
+  height: 581px;
+  background-color: white;
+  transform: translate(-50%, -50%);
+  border-radius: 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.modal-btn {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 8px;
+  right: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  padding: 0;
+  background-color: var(--bg-color);
+  cursor: pointer;
+}
+
+.icon-modal-button {
+  fill:rgba(0, 0, 0, 1);
+}
+
 .offers {
   color: var(--main-text-color);
   font-size: 36px;
