--- a/styles/styles.css
+++ b/styles/styles.css
@@ -410,6 +410,18 @@ letter-spacing: 0.02em;
 .offers-container li {
 margin-right: 30px;
 list-style: none;
+position: relative;
+}
+
+.offers-container li::after{
+  content: '';
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .offers-container {
