--- a/styles/styles.css
+++ b/styles/styles.css
@@ -236,12 +236,11 @@ letter-spacing: 0.02em;
 }
 
 .backdrop {
-  
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 
   background-color: rgba(0, 0, 0, 0.2);
 }
@@ -262,6 +261,7 @@ letter-spacing: 0.02em;
   transform: translate(-50%, -50%);
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  
 }
 
 .modal-btn {
@@ -413,12 +413,19 @@ list-style: none;
 position: relative;
 }
 
-.offers-container li::after{
-  content: '';
+.offers-container p {
   width: 100%;
   height: 70px;
   background-color: rgba(47, 48, 58, 0.8);
   display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--bg-color);
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -631,6 +638,7 @@ margin-right: 0;
   flex-basis: calc(100% / 3 - 30px);
   border: 1px solid #EEEEEE;
 }
+
 .cards.list > li:hover, 
 .cards.list > li:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -675,6 +683,39 @@ margin-right: 0;
   line-height: 1.77;
   letter-spacing: 0.03em;
 }
+
+.overlay-container {
+  position: relative;
+  width: 370px;
+  height: 294px;
+  overflow: hidden;
+}
+
+.overlay-paragraph {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(33, 150, 243, 0.9);
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  color: var(--bg-color);
+  font-family: 'Roboto';
+  font-size: 400;
+  font-size: 18px;
+  letter-spacing: 00.03em;
+  line-height: 1.55;
+  padding: 63px 24px;
+}
+
+.cards.list li:hover .overlay-paragraph {
+  transform: translateY(0);
+}
+
 
 /* Налаштування футера */
 .bottom {
