--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,7 @@
 /* bg-hero-color: rgba(47, 48, 58, 1) */
 /* font-size-logo: 26px */
 /* contact-footer-color: rgba(255, 255, 255, 0.6); */
+/* transition: cubic-bezier(0.4, 0, 0.2, 1) */
 
 /* Загальні налаштування */
 
@@ -23,7 +24,8 @@
   --bg-button-color: rgba(245, 244, 250, 1);
   --font-size-logo: font-size: 26px;
   --contact-footer-color: rgba(255, 255, 255, 0.6);
-  --icon-color: rgba(175, 177, 184, 1)
+  --icon-color: rgba(175, 177, 184, 1);
+  --transition-cubic: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 body {
   color: var(--main-text-color);
@@ -131,6 +133,8 @@ letter-spacing: 0.02em;
   font-weight: 500;
   color: var(--main-text-color);
   position: relative;
+
+  transition: var(--transition-cubic);
 }
 
 .nav-list > a:hover,
@@ -261,7 +265,7 @@ letter-spacing: 0.02em;
   transform: translate(-50%, -50%);
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  
+
 }
 
 .modal-btn {
@@ -309,6 +313,8 @@ letter-spacing: 0.02em;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.7;
+
+  transition: var(--transition-cubic);
 }
 
 .phone:hover,
@@ -319,6 +325,7 @@ letter-spacing: 0.02em;
 .email {
   display: block;
   margin-right: 50px;
+  transition: var(--transition-cubic);
 }
 
 .email-footer {
@@ -330,6 +337,8 @@ letter-spacing: 0.02em;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.7;
+
+  transition: var(--transition-cubic);
 }
 
 .email-footer:focus, 
@@ -524,6 +533,8 @@ margin-right: 0px;
   justify-content: center;
   align-items: center;
   fill: rgba(175, 177, 184, 1);
+
+  transition: var(--transition-cubic);
 }
 
 .social-link:focus,
@@ -572,6 +583,7 @@ margin-right: 0;
 
 .client-icon {
   fill: var(--icon-color);
+  transition: var(--transition-cubic);
 }
 .client a:focus .client-icon,
 .client a:hover .client-icon {
@@ -610,6 +622,8 @@ margin-right: 0;
   font-weight: 500;
   font-family: inherit;
   line-height: 1.7;
+
+  transition: var(--transition-cubic);
 }
 
 /* Картки вкладки портфоліо */
@@ -637,6 +651,7 @@ margin-right: 0;
   /* outline: 1px solid red; */
   flex-basis: calc(100% / 3 - 30px);
   border: 1px solid #EEEEEE;
+  transition: var(--transition-cubic);
 }
 
 .cards.list > li:hover, 
@@ -701,7 +716,7 @@ margin-right: 0;
   width: 100%;
   height: 100%;
   transform: translateY(100%);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: var(--transition-cubic);
 
   color: var(--bg-color);
   font-family: 'Roboto';
@@ -761,11 +776,7 @@ align-items: baseline;
   margin-right: 10px;
 
 }
-.social-links-footer {
-  display: flex;
-  align-items: baseline;
-  flex-direction: column;
-}
+
 
 .social-link-footer {
   display: flex;
@@ -776,6 +787,8 @@ align-items: baseline;
   border-radius: 50%;
   justify-content: center;
   align-items: center;
+
+  transition: var(--transition-cubic);
 }
 
 .social-link-footer:hover, 
